exhbition view corrections:
css: scrollbar moved to textbox instead of container
bug fix 1: all items are shown instead of only 10
bug fix 2: no empty slides, thumbnail fallback

--- a/public/css/override.less
+++ b/public/css/override.less
@@ -203,3 +203,11 @@ body div[role=main] .wrapper main section.exhibition .assets .actions .notificat
     padding-right:0;
 }
  
+ 
+body div[role=main] .wrapper section.exhibitionviewer .exhibitionplayer .carouselexhibition .item .container {
+    overflow: hidden; 
+} 
+
+body div[role=main] .wrapper section.exhibitionviewer .exhibitionplayer .carouselexhibition .item.style1 .textbox, body div[role=main] .wrapper section.exhibitionviewer .exhibitionplayer .carouselexhibition .item.style2 .textbox, body div[role=main] .wrapper section.exhibitionviewer .exhibitionplayer .carouselexhibition .item.style3 .textbox{
+    overflow: auto;
+}
